package com.example.calculator.model.token

open class Token(
    var value: String,
    var type: TokenTypes
    )